--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "dependencies": {
     "mineflayer": "^4.27.0"
   },
-  "name": "afkpesca",
+  "name": "Afkbb",
   "version": "1.0.0",
   "description": "\"# Pesca\"",
-  "main": "antiafk.js",
+  "main": "main.js",
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
